[project]
authors = [{ name = "Samuele Mazzanti", email = "mazzanti.sam@gmail.com" }]
name = "mrmr_selection"
requires-python = ">= 3.11"
version = "0.2.9"
dependencies = [
    "category-encoders>=2.8.1,<3",
    "jinja2>=3.1.6,<4",
    "tqdm>=4.67.1,<5",
    "joblib>=1.5.1,<2",
    "pandas>=2.3.0,<3",
    "numpy>=2.2.0,<3",
    "scikit-learn>=1.7.0,<2",
    "polars>=1.30.0,<2",
    "scipy>=1.15.3,<2",
    "ipython>=9.3.0,<10",
    "pyarrow>=20.0.0,<21",
    "google>=3.0.0,<4",
    "pyspark>=4.0.0,<5",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["./"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
mrmr_selection = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }

[dependency-groups]
dev = ["pytest", "ipykernel>=6.29.5,<7"]
